添加了商品分类管理功能

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -16,6 +16,9 @@ html,body,#app {
     height: 100%;
 
 }
+.ql-editor {
+    min-height: 200px;
+}
 
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 ::-webkit-scrollbar
